tests/negative/gold/indent1-test.gold
tests/negative/indent1-test.toit:8:9: error: All expressions in a sequence must be indented the same way
        break
        ^~~~~
Compilation failed
